// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`recipes - esbuild should create valid stylesheet 1`] = `
".g7vce92 {
  --g7vce90: #b0e0e6;
  --g7vce91: #fff;
}
.g7vce93 {
  --g7vce90: crimson;
  --g7vce91: #000;
}
.g7vce94 {
  border: 0;
}
.g7vce95 {
  background: var(--g7vce90);
  border-radius: 6px;
  color: var(--g7vce91);
  transition: all 0.2s ease;
}
.g7vce95:hover {
  transform: translateY(-3px);
}
.g7vce96 {
  font-size: 16px;
  line-height: 24px;
}
.g7vce97 {
  font-size: 24px;
  line-height: 40px;
}
.g7vce99:hover {
  box-shadow: 0 10px 6px -6px #777;
}
.g7vce9a {
  font-weight: 700;
}
.g7vce9c {
  align-items: flex-start;
  display: flex;
  flex-direction: column;
}
.g7vce9d {
  gap: 20px;
}
@media only screen and (min-width: 600px) {
  .g7vce9b {
    border: 2px solid green;
  }
  .g7vce9d {
    gap: 30px;
  }
}
"
`;

exports[`recipes - mini-css-extract should create valid stylesheet 1`] = `
"._1ohhcjl2 {
  --_1ohhcjl0: #b0e0e6;
  --_1ohhcjl1: #fff;
}
._1ohhcjl3 {
  --_1ohhcjl0: crimson;
  --_1ohhcjl1: #000;
}
._1ohhcjl4 {
  border: 0;
}
._1ohhcjl5 {
  background: var(--_1ohhcjl0);
  border-radius: 6px;
  color: var(--_1ohhcjl1);
  transition: all 0.2s ease;
}
._1ohhcjl5:hover {
  transform: translateY(-3px);
}
._1ohhcjl6 {
  font-size: 16px;
  line-height: 24px;
}
._1ohhcjl7 {
  font-size: 24px;
  line-height: 40px;
}
._1ohhcjl9:hover {
  box-shadow: 0 10px 6px -6px #777;
}
._1ohhcjla {
  font-weight: 700;
}
._1ohhcjlc {
  align-items: flex-start;
  display: flex;
  flex-direction: column;
}
._1ohhcjld {
  gap: 20px;
}
@media only screen and (min-width: 600px) {
  ._1ohhcjlb {
    border: 2px solid green;
  }
  ._1ohhcjld {
    gap: 30px;
  }
}
"
`;

exports[`recipes - vite should create valid stylesheet 1`] = `
".g7vce92 {
  --g7vce90: #b0e0e6;
  --g7vce91: #fff;
}
.g7vce93 {
  --g7vce90: crimson;
  --g7vce91: #000;
}
.g7vce94 {
  border: 0;
}
.g7vce95 {
  background: var(--g7vce90);
  border-radius: 6px;
  color: var(--g7vce91);
  transition: all 0.2s ease;
}
.g7vce95:hover {
  transform: translateY(-3px);
}
.g7vce96 {
  font-size: 16px;
  line-height: 24px;
}
.g7vce97 {
  font-size: 24px;
  line-height: 40px;
}
.g7vce99:hover {
  box-shadow: 0 10px 6px -6px #777;
}
.g7vce9a {
  font-weight: 700;
}
.g7vce9c {
  align-items: flex-start;
  display: flex;
  flex-direction: column;
}
.g7vce9d {
  gap: 20px;
}
@media only screen and (min-width: 600px) {
  .g7vce9b {
    border: 2px solid green;
  }
  .g7vce9d {
    gap: 30px;
  }
}
"
`;
